\name{NEWS}
\title{ for package \pkg{mitology} }

\section{Version 0.99.0}{
 \itemize{
  \item New package mitology, for the study of mitochondrial activity from
  RNA-seq data.
 }
}