@@ -1,7 +1,17 @@
 \name{NEWS}
 \title{ for package \pkg{mitology} }
 
-\section{Version 0.99.0}{
+\section{Version 1.2.0}{
+ \itemize{
+  \item New enrichMito function to perform a mitochondrial enrichment analysis 
+  of a gene list.
+  \item New gseaMito function to perform a mitochondrial GSEA of a gene list.
+  \item New mitoTreePoint function draw a circular dotplot on the mitochondrial 
+  gene set tree.
+ }
+}
+
+\section{Version 1.0.0}{
  \itemize{
   \item New package mitology, for the study of mitochondrial activity from
   RNA-seq data.
